[package]
name = "clac-lang"
version = "0.1.1"
edition = "2024"
exclude = [
    "samples/",
]
license = "GPL-3.0-or-later"
description = "Reference implementation of Clac++, a simple stack-based postfix (reverse polish notation) calculator/programming language."

[[bin]]
name = "clac"

[dependencies]
ahash = "0.8.12"
clap = { version = "4.6.0", features = ["derive"] }
