[package]
name = "clac-lang"
version = "0.2.0"
edition = "2024"
exclude = [
    "samples/",
]
license = "GPL-3.0-or-later"
description = "Reference implementation of Clac++, a simple stack-based postfix (reverse polish notation) calculator/programming language."

[[bin]]
name = "clac"

[dependencies]
ahash = "0.8.12"
clap = { version = "4.6.0", features = ["derive"] }
cranelift = "0.130.1"
cranelift-jit = { version = "0.130.1", features = ["selinux-fix"] }
cranelift-module = "0.130.1"
cranelift-native = "0.130.1"
cranelift-object = "0.130.1"
memmap2 = "0.9.10"
rustyline = "18.0.0"
thiserror = "2.0.18"
